[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Theme_20.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/nasalization/nasalization-rg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fond_accueil.png" type="Texture" id=3]
[ext_resource path="res://assets/fond_accueil_logo.png" type="Texture" id=4]
[ext_resource path="res://scripts/Pause_menu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="Pause_menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -153.0
rect_min_size = Vector2( 1024, 0 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fond" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 410.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Titre" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 410.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Pause...."

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 410.0
margin_bottom = 69.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 410.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Modes_jeux" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 77.0
margin_top = 108.0
margin_right = 333.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_constants/separation = 40

[node name="Reprendre" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux"]
margin_right = 256.0
margin_bottom = 31.0
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Reprendre la partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retour" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux"]
margin_top = 71.0
margin_right = 256.0
margin_bottom = 102.0
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Abandonner... :-("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator5" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 410.0
margin_bottom = 400.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 414.0
margin_right = 824.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 36.0
margin_top = 54.0
margin_right = 374.0
margin_bottom = 346.0
size_flags_horizontal = 15
size_flags_vertical = 15
texture = ExtResource( 4 )
stretch_mode = 5
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Reprendre" to="." method="_on_Reprendre_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Reprendre" to="." method="_on_Reprendre_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Retour" to="." method="_on_Retour_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Retour" to="." method="_on_Retour_mouse_exited"]
